[wk2] REGRESSION (r154673): PDF scrolling moves very slowly https://bugs.webkit.org/show_bug.cgi?id=120542

Reviewed by Tim Horton.

Source/WebCore:

Handle 'wheel' events in addition to 'mousewheel'.

* html/shadow/MediaControlsApple.cpp:
Listen for the standard 'wheel' event instead of the legacy 'mousewheel' one.
While not strictly needed, we should use the legacy events as little as
possible.
* plugins/PluginView.cpp:
Handle 'wheel' events in addition to 'mousewheel'.

Source/WebKit2:

Handle 'wheel' events in addition to 'mousewheel'. This fixes
PDF scrolling.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::handleEvent):


Canonical link: https://commits.webkit.org/138919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155321 268f45cc-cd09-0410-ab3c-d52691b4dbfc